--- a/hikingbuddy/src/app/navbar/navbar.component.html
+++ b/hikingbuddy/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="flex">
+<nav class="bg-green-600">
     <ul>
-        <h1 class="py-2" id="title">HikingBuddy</h1>
+        <h1 class="py-5" id="title">HikingBuddy</h1>
     </ul>
     <ul class="flex gap-5">
         <li><a routerLink="/home">Home</a></li>
