--- a/hikingbuddy/src/app/pages/home/home.component.html
+++ b/hikingbuddy/src/app/pages/home/home.component.html
@@ -1,5 +1,6 @@
+<div class="flex column justify center">
 <input type="text" #searchtext placeholder="Search For trails">
 <button (click) = search(searchtext.value)>Submit</button>
-
+</div>
 
 <router-outlet></router-outlet>
