Working on the ratings page

--- a/hikingbuddy/src/app/pages/home/home.component.html
+++ b/hikingbuddy/src/app/pages/home/home.component.html
@@ -1,6 +1,8 @@
-<div class="flex column justify center">
+<div id= "trail_search"class="flex column justify center">
 <input type="text" #searchtext placeholder="Search For trails">
-<button (click) = search(searchtext.value)>Submit</button>
+<button (click) = search(searchtext.value)>Search</button>
 </div>
+
+
 
 <router-outlet></router-outlet>
