--- a/hikingbuddy/src/app/pages/login/login.component.html
+++ b/hikingbuddy/src/app/pages/login/login.component.html
@@ -1,4 +1,20 @@
 <!--<app-navbar></app-navbar> -->
-
+<div id="form">
+<form [formGroup]= "formGroup">
+  
+   <div id="controls">
+    <h1>Login</h1>
+    <label>
+        Username:
+        <input type="text" formControlName="username" placeholder="Username">
+    </label>
+    <label>
+        Password:
+        <input type="password" formControlName="password" placeholder="Password">
+    </label>
+    <button (click)="submitForm()">Submit</button>
+</div>
+</form>
+</div>
 
 <router-outlet></router-outlet>
