Still working on the home page

--- a/hikingbuddy/src/app/modules/Trail/Components/TrailInfo/trail-info/trail-info.component.html
+++ b/hikingbuddy/src/app/modules/Trail/Components/TrailInfo/trail-info/trail-info.component.html
@@ -1,3 +1,7 @@
-<div>
-    <h1>{{trail.name}}</h1>
-</div>
+<ng-template>
+<h3>{{trail.name}}</h3>
+<h4>{{trail.trailLength}}</h4>
+</ng-template>
+<router-outlet></router-outlet>
+
+
