--- a/hikingbuddy/src/app/modules/Trail/Components/top-rated/top-rated.component.html
+++ b/hikingbuddy/src/app/modules/Trail/Components/top-rated/top-rated.component.html
@@ -1,10 +1,10 @@
-<!--<div *ngfor="let trail of trails; let i = index">
-   <div *ngIf="trail[i] != null">
+<div *ngfor= "let trail of trails">
+   <div *ngIf="trail != null">
         <h3>{{trail.id}}</h3>
         <h4>{{trail.rating}}</h4>
    </div>
 
-</div> -->
+</div> 
 
 
 
